--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
 body {
   margin: 0;
   background: linear-gradient(to right, #b12fee, #186aad);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .container {
