--- a/src/index.css
+++ b/src/index.css
@@ -26,14 +26,24 @@ body {
   justify-content: space-around;
 }
 
+/* Navbar styles */
+nav {
+  background-color: var(--black-1);
+  color: var(--white-1);
+  position: fixed;
+  width: 100vw;
+  height: 4rem;
+  font-size: 2.5rem;
+}
+
 /* Calculator Styles */
 
 .calculator-grid {
   display: grid;
-  margin-top: 2rem;
   justify-content: center;
   grid-template-columns: repeat(4, 6rem);
   grid-template-rows: minmax(7rem, auto) repeat(5, 6rem);
+  margin-top: 6rem;
 }
 
 .calculator-grid > button {
@@ -77,7 +87,6 @@ body {
 
 /* History Styles */
 .history-container {
-  margin-top: 2rem;
   background-color: var(--black-1);
   height: 37rem;
   overflow-y: auto;
@@ -86,6 +95,7 @@ body {
   word-break: break-all;
   color: var(--white-1);
   width: 30%;
+  margin-top: 6rem;
 }
 
 .history-item {
