--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -2,7 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 5em;
+    width: 40%;
+    background-color: var(--white-1);
+    margin: 5rem auto;
+    padding: 3rem 0;
+    border-radius: 4px;
 }
 
 input {
